Fixed list alignment in small screen landscape orientation

--- a/_navbar-landscape.scss
+++ b/_navbar-landscape.scss
@@ -17,6 +17,7 @@ nav {
         transform: translateX(-50%);
         li {
             margin: 10px 0;
+            left: 0;
         }
     }
 }
